--- a/Ch19/Exercise19/Exercise19.cabal
+++ b/Ch19/Exercise19/Exercise19.cabal
@@ -1,21 +1,23 @@
-name:                Exercise19
-version:             0.1.0.0
--- synopsis:
--- description:
-homepage:            https://github.com/githubuser/Exercise19#readme
-license:             BSD3
-license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2019 Author name here
-category:            Web
-build-type:          Simple
-cabal-version:       >=1.10
-extra-source-files:  README.md
+cabal-version: >=1.10
+name: Exercise19
+version: 0.1.0.0
+license: BSD3
+license-file: LICENSE
+copyright: 2019 Author name here
+maintainer: example@example.com
+author: Author name here
+homepage: https://github.com/githubuser/Exercise19#readme
+category: Web
+build-type: Simple
+extra-source-files:
+    README.md
 
 executable Exercise19
-  hs-source-dirs:      src
-  main-is:             Main.hs
-  default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5,
-                       scotty
+    main-is: Main.hs
+    hs-source-dirs: src
+    default-language: Haskell2010
+    build-depends:
+        base >=4.7 && <5,
+        scotty -any,
+        persistent -any,
+        conduit -any
