--- a/Ch21/Exercise/Exercise.cabal
+++ b/Ch21/Exercise/Exercise.cabal
@@ -17,4 +17,7 @@ executable Exercise
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       base >= 4.7 && < 5,
+                       transformers,
+                       QuickCheck,
+                       checkers
