--- a/Ch23/Exercise/Exercise.cabal
+++ b/Ch23/Exercise/Exercise.cabal
@@ -19,4 +19,6 @@ executable Exercise
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5,
                        random,
-                       transformers
+                       transformers,
+                       dlist,
+                       mtl
