--- a/Ch24/Exercise/Exercise.cabal
+++ b/Ch24/Exercise/Exercise.cabal
@@ -1,8 +1,8 @@
-name:                Course
+name:                Exercise
 version:             0.1.0.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/githubuser/Course#readme
+homepage:            https://github.com/githubuser/Exercise#readme
 license:             BSD3
 license-file:        LICENSE
 author:              Author name here
@@ -13,7 +13,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 extra-source-files:  README.md
 
-executable Course
+executable Exercise
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
@@ -30,4 +30,3 @@ executable Course
                        utf8-string,
                        aeson,
                        scientific
-
