--- a/Ch26/Exercise/Exercise.cabal
+++ b/Ch26/Exercise/Exercise.cabal
@@ -18,4 +18,7 @@ executable Exercise
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5,
-                       transformers
+                       transformers,
+                       containers,
+                       text,
+                       scotty
