--- a/Ch26/Exercise/Exercise.cabal
+++ b/Ch26/Exercise/Exercise.cabal
@@ -21,4 +21,5 @@ executable Exercise
                        transformers,
                        containers,
                        text,
-                       scotty
+                       scotty,
+                       criterion
