--- a/Ch26/Exercise/Exercise.cabal
+++ b/Ch26/Exercise/Exercise.cabal
@@ -22,4 +22,6 @@ executable Exercise
                        containers,
                        text,
                        scotty,
-                       criterion
+                       criterion,
+                       random,
+                       mtl
